--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
+    circlize,
+    ComplexHeatmap,
     dplyr,
     ggplot2,
+    grid,
     patchwork,
     reshape2,
     Seurat
