Add some new paramters

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: scRNAtoolVis
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.2
+Title: Making scRNA-seq visualization more easier and better
+Version: 0.0.3
 Authors@R: 
     person("JunJun", "Lao", , "3219030654@stu.cpu.edu.cn", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -21,4 +21,5 @@ Imports:
     magrittr,
     patchwork,
     reshape2,
-    Seurat
+    Seurat,
+    stats
