--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ export("%>%")
 export(AverageHeatmap)
 export(FeatureCornerAxes)
 export(clusterCornerAxes)
+export(jjDotPlot)
 export(markerVocalno)
+import(tidyverse)
 importFrom(magrittr,"%>%")
