--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,9 @@ export(FeatureCornerAxes)
 export(clusterCornerAxes)
 export(jjDotPlot)
 export(markerVocalno)
+import(ggdendro)
+import(ggsci)
+import(patchwork)
 import(tidyverse)
+import(utils)
 importFrom(magrittr,"%>%")
