--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AverageHeatmap)
 export(FeatureCornerAxes)
 export(clusterCornerAxes)
 export(jjDotPlot)
+export(jjVolcano)
 export(markerVocalno)
 import(ggdendro)
 import(ggsci)
