add drawLegend to draw cluster ids

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(AverageHeatmap)
 export(FeatureCornerAxes)
 export(cellRatioPlot)
 export(clusterCornerAxes)
+export(drawLegend)
 export(jjDotPlot)
 export(jjVolcano)
 export(markerVocalno)
