--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(drawLegend)
 export(jjDotPlot)
 export(jjVolcano)
 export(markerVocalno)
+export(tracksPlot)
 import(ggdendro)
 import(ggsci)
 import(patchwork)
