--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,23 @@ export(drawLegend)
 export(jjDotPlot)
 export(jjVolcano)
 export(markerVocalno)
+export(scatterCellPlot)
 export(tracksPlot)
 import(ggdendro)
 import(ggsci)
 import(patchwork)
 import(tidyverse)
 import(utils)
+importFrom(grid,arrow)
+importFrom(grid,gpar)
+importFrom(grid,grid.newpage)
+importFrom(grid,grid.points)
+importFrom(grid,grid.rect)
+importFrom(grid,grid.segments)
+importFrom(grid,grid.text)
+importFrom(grid,grid.xaxis)
+importFrom(grid,grid.yaxis)
+importFrom(grid,popViewport)
+importFrom(grid,pushViewport)
+importFrom(grid,viewport)
 importFrom(magrittr,"%>%")
