--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,18 +6,24 @@ export(FeatureCornerAxes)
 export(cellRatioPlot)
 export(clusterCornerAxes)
 export(drawLegend)
+export(featurePlot)
 export(jjDotPlot)
 export(jjVolcano)
 export(markerVocalno)
 export(scatterCellPlot)
 export(tracksPlot)
+import(Seurat)
+import(dplyr)
 import(ggdendro)
+import(ggplot2)
 import(ggsci)
+import(grDevices)
 import(patchwork)
 import(tidyverse)
 import(utils)
 importFrom(grid,arrow)
 importFrom(grid,gpar)
+importFrom(grid,grid.layout)
 importFrom(grid,grid.newpage)
 importFrom(grid,grid.points)
 importFrom(grid,grid.rect)
@@ -27,5 +33,7 @@ importFrom(grid,grid.xaxis)
 importFrom(grid,grid.yaxis)
 importFrom(grid,popViewport)
 importFrom(grid,pushViewport)
+importFrom(grid,unit)
 importFrom(grid,viewport)
 importFrom(magrittr,"%>%")
+importFrom(stats,quantile)
