add sample.order for cellRatioPlot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ import(grDevices)
 import(patchwork)
 import(tidyverse)
 import(utils)
+importFrom(ggunchull,stat_unchull0)
 importFrom(grid,arrow)
 importFrom(grid,gpar)
 importFrom(grid,grid.layout)
