--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+biocViews: Software, Visualization
 Remotes:
   junjunlab/jjAnno,
   junjunlab/jjPlot,
